fix score display visibility

--- a/static/tweet.css
+++ b/static/tweet.css
@@ -113,7 +113,7 @@ a.tweet_embed div.datetime {
 }
 
 a.tweet_embed div.match_score {
-	margin: 20px 20px 0px 20px;
-	font-size: 1em;
-	font-weight: 200;
+  margin: 20px 20px 0px 20px;
+  font-size: 1em;
+  color: #697882;
 }
